<?xml version="1.0" encoding="utf-8"?>

<!-- 
 
 @author Brian Stambaugh

 Copyright 2010 Brian Stambaugh
 This program is distributed under the terms of the GNU General Public License.
 
  This file is part of Rib's Roller.

   Rib's Roller is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   Rib's Roller is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Rib's Roller.  If not, see <http://www.gnu.org/licenses/>.
 -->

<resources>
    <string name="hello">Roll the Dice!</string>
    <string name="app_name">Rib\'s Roller</string>
	<string name="d20">d20</string>
	<string name="d4">d4</string>
	<string name="d6">d6</string>
	<string name="d8">d8</string>
	<string name="d10">d10</string>
	<string name="d12">d12</string>
	<string name="dPercent">d100</string>	
	
	
	<string name="clear">Clear</string>
	<string name="quit">Quit</string>
	<string name="ok">Ok</string>
	
	<string name="custom_button_one_on">The left custom button will be shown.</string>
	<string name="custom_button_one_off">The left custom button will not be shown.</string>
	<string name="custom_button_one_title">Left Custom Button</string>
	<string name="custom_button_one_checked">lftCstmBttn</string>

	<string name="custom_button_two_on">The right custom button will be shown.</string>
	<string name="custom_button_two_off">The right custom button will not be shown.</string>
	<string name="custom_button_two_title">Right Custom Button</string>
	<string name="custom_button_two_checked">rghtCstmBttn</string>
	
	<string name="user_input_buttons">Buttons will be displayed for user input.</string>
	<string name="user_input_images">Buttons will not be displayed for user input.</string>
	<string name="user_input_title">User Input</string>
	<string name="user_input_checked">usrInpt</string>	

	<string name="layout_title">User Input</string>
	<string name="layout_preference">Show Buttons</string>
	<string name="layout_message">Options for user interaction.</string>
	
	<string name="change_value_dialog_title">Change Value</string>
	<string name="plus">+</string>
	<string name="minus">-</string>
	
	<string name="title_hint"><i>Name</i></string>
	<string name="new_die_text">Add a Die</string>
	<string name="plus_one">+1</string>
	<string name="minus_one">-1</string>

	<string name="d">d</string>
	<string name="new_die_dialog_title">New Die</string>
	<string name="edit_die_dialog_title">Edit Die</string>
</resources>
