<?xml version="1.0" encoding="utf-8"?>
<!-- 
 
 @author Brian Stambaugh

 Copyright 2010 Brian Stambaugh
 This program is distributed under the terms of the GNU General Public License.
 
  This file is part of Rib's Roller.

   Rib's Roller is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.

   Rib's Roller is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.

   You should have received a copy of the GNU General Public License
   along with Rib's Roller.  If not, see <http://www.gnu.org/licenses/>.
 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    >
    	
	<TextView
		android:id="@+id/new_die_hint"
		
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"	
		
		android:layout_centerHorizontal="true"
		
		android:text="@string/new_die_hint"
		android:textSize="12sp"
	></TextView>
    	
	<TextView
		android:id="@+id/d"
		
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		
		android:layout_centerHorizontal="true"
		android:layout_below="@id/new_die_hint"
		
		android:layout_margin="3dp"
		
		android:gravity="center"
		
		android:text="@string/d"
		android:textSize="24sp"
	></TextView>  
            
    <EditText
        android:id="@+id/coefficient"
        
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        
        android:layout_toLeftOf="@id/d"
		android:layout_below="@id/new_die_hint"
        
        android:layout_marginLeft="5dp"	
        android:layout_marginRight="5dp"	
        
        android:minWidth="200dp"
       
        android:scrollHorizontally="true"
        android:gravity="center"         
		
		android:inputType="number"
	></EditText>	

    <EditText
        android:id="@+id/value"
        
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
       
        android:layout_toRightOf="@id/d"
		android:layout_below="@id/new_die_hint"

        android:layout_marginLeft="5dp"	
        android:layout_marginRight="5dp"	
        
        android:minWidth="200dp"
        
        android:scrollHorizontally="true"
        android:gravity="center"         
		
		android:inputType="number"
	></EditText>		
	
	<Button
		android:id="@+id/coefficient_plus"
	        
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

		android:layout_below="@id/coefficient"
		android:layout_alignLeft="@id/coefficient"
		
		android:minWidth="40dp"
        
        android:text="@string/plus"
	
		android:onClick="onClick"
	></Button>
	
	<Button
		android:id="@+id/coefficient_minus"
	        
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

		android:layout_below="@id/coefficient"
		android:layout_alignRight="@id/coefficient"
		
		android:minWidth="40dp"
        
        android:text="@string/minus"
	
		android:onClick="onClick"
	></Button>


	<Button
		android:id="@+id/value_plus"
	        
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

		android:layout_below="@id/value"
		android:layout_alignLeft="@id/value"
		
		android:minWidth="40dp"
        
        android:text="@string/plus"
	
		android:onClick="onClick"
	></Button>
	
	<Button
		android:id="@+id/value_minus"
	        
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"

		android:layout_below="@id/value"
		android:layout_alignRight="@id/value"
		
		android:minWidth="40dp"
        
        android:text="@string/minus"
	
		android:onClick="onClick"
	></Button>
        
</RelativeLayout>
